# FilterFrames

./: .gitignore  CHANGELOG.md  README.md  example.py  justfile  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  python-package.yml  python-publish.yml
src/filterframes/: __init__.py  filterframes.py
tests/: test_filterframes.py
tests/data/: DTASelect-filter_V2_1_12_paser.txt  DTASelect-filter_V2_1_13.txt
